err/mosquittochat.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mosquittoChat'...
Listing './lib/python3.5/site-packages/mosquittoChat/apps'...
Listing './lib/python3.5/site-packages/mosquittoChat/apps/main'...
Listing './lib/python3.5/site-packages/mosquittoChat/apps/mosquitto'...
Listing './lib/python3.5/site-packages/mosquittoChat/static'...
Listing './lib/python3.5/site-packages/mosquittoChat/static/css'...
Listing './lib/python3.5/site-packages/mosquittoChat/static/js'...
Listing './lib/python3.5/site-packages/mosquittoChat/templates'...
Compiling './lib/python3.5/site-packages/mosquittoChat/utils.py'...
***   File "./lib/python3.5/site-packages/mosquittoChat/utils.py", line 9
    print urls
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mosquittoChat-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/paho'...
Listing './lib/python3.5/site-packages/paho/mqtt'...
Listing './lib/python3.5/site-packages/paho_mqtt-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sockjs'...
Listing './lib/python3.5/site-packages/sockjs/tornado'...
Listing './lib/python3.5/site-packages/sockjs/tornado/transports'...
Listing './lib/python3.5/site-packages/sockjs_tornado-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
